set(CommentCmtSrc ${PROTO_DIR}/CommonCmt.pb.cc)
set(ObjectAggregationMutationSrc ${PROTO_DIR}/ObjectAggregationMutation.pb.cc)
set(ReviewFilterSrc ${PROTO_DIR}/ReviewFilter.pb.cc)
set(SinaUserPairSrc ${PROTO_DIR}/SinaUserPair.pb.cc)
set(UserStatusTagSrc ${PROTO_DIR}/UserStatusTag.pb.cc)
set(apistateSrc ${PROTO_DIR}/apistate.pb.cc)
set(attitudeSrc ${PROTO_DIR}/attitude.pb.cc)
set(favorSrc ${PROTO_DIR}/favor.pb.cc)
set(favoriteTagSrc ${PROTO_DIR}/favoriteTag.pb.cc)
set(groupfirehoseSrc ${PROTO_DIR}/groupfirehose.pb.cc)
set(groupmessageSrc ${PROTO_DIR}/groupmessage.pb.cc)
set(mobilebindSrc ${PROTO_DIR}/mobilebind.pb.cc)
set(objecttriggerSrc ${PROTO_DIR}/objecttrigger.pb.cc)
set(reviewSrc ${PROTO_DIR}/review.pb.cc)
set(shorturlSrc ${PROTO_DIR}/shorturl.pb.cc)
set(statusSrc ${PROTO_DIR}/status.pb.cc)
set(topicSrc ${PROTO_DIR}/topic.pb.cc)
set(topicstausSrc ${PROTO_DIR}/topicstatus.pb.cc)
set(userSrc ${PROTO_DIR}/user.pb.cc)
set(weiboentitySrc ${PROTO_DIR}/weiboentity.pb.cc)
set(TriggerMessageSrc ${PROTO_DIR}/TriggerMessage.pb.cc)
set(TriggerMessageBatchSrc ${PROTO_DIR}/TriggerMessageBatch.pb.cc)
set(TriggerMessageBodySrc ${PROTO_DIR}/TriggerMessageBody.pb.cc)
set(attitudeSrc ${PROTO_DIR}/attitude.pb.cc)
set(commentSrc ${PROTO_DIR}/comment.pb.cc)
set(directmessageSrc ${PROTO_DIR}/directmessage.pb.cc)
set(firehosemessageSrc ${PROTO_DIR}/firehosemessage.pb.cc)
set(likeSrc ${PROTO_DIR}/like.pb.cc)
set(postsourceSrc ${PROTO_DIR}/postsource.pb.cc)
set(statusSrc ${PROTO_DIR}/status.pb.cc)

set(SRC2 main.cc master.cc worker.cc)
add_executable(reactor-server ${SRC2})
target_link_libraries(reactor-server pthread)

